fixed spacing between images

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -110,6 +110,7 @@ h2 h4 {
 .item {
   height: 200px;
   width: 300px;
+  margin-right: 20px;
 }
 
 /*Third Container */
@@ -132,6 +133,7 @@ h2 h4 {
   width: 300px;
   height: 200px;
   background-color: black;
+  margin-right: 20px;
 }
 
 
